--- a/src/main/java/org/ProToType/SwingGUI.form
+++ b/src/main/java/org/ProToType/SwingGUI.form
@@ -10,6 +10,15 @@
       <html.disable class="java.lang.Boolean" value="false"/>
     </clientProperties>
     <border type="none"/>
-    <children/>
+    <children>
+      <component id="88b9a" class="javax.swing.JLabel" binding="label">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Label"/>
+        </properties>
+      </component>
+    </children>
   </grid>
 </form>
